<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>automenta</groupId>
    <artifactId>spimedb</artifactId>
    <version>1.0</version>
    <modules>
        <module>media</module>
        <module>core</module>
        <module>logic</module>
    </modules>
    <packaging>pom</packaging>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <!--<useIncrementalCompilation>false</useIncrementalCompilation>-->
                </configuration>
            </plugin>




            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <includes>
                        <!-- because they dont all have the pattern: ____Test.java yet -->
                        <include>**/*.java</include>
                    </includes>
                    <skipTests>true</skipTests>
                    <useFile>false</useFile>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                </configuration>
            </plugin>

        </plugins>
    </build>


    <!--<plugin>-->
    <!--<groupId>com.garethevans.plugin</groupId>-->
    <!--<artifactId>swagger-codegen-maven-plugin</artifactId>-->
    <!--<version>LATEST</version>-->
    <!--<executions>-->
    <!--<execution>-->
    <!--<goals>-->
    <!--<goal>generate</goal>-->
    <!--</goals>-->
    <!--<configuration>-->
    <!--<inputSpec>src/main/resources/api.yaml</inputSpec>-->
    <!--<language>java</language>-->
    <!--</configuration>-->
    <!--</execution>-->
    <!--</executions>-->
    <!--</plugin>-->

    <!--</plugins>-->
    <!--</build>-->


    <!-- ================================================================== -->
    <!--     Repositories. This is where Maven looks for dependencies. The  -->
    <!--     Maven repository is implicit and doesn't need to be specified. -->
    <!-- ================================================================== -->
    <!--<repositories>-->
    <!--
    <repository>
        <id>vaadin-addons</id>
        <url>http://maven.vaadin.com/vaadin-addons</url>
    </repository>
    -->

    <!--<repository>-->
    <!--<id>maven2-repository.dev.java.net</id>-->
    <!--<name>Java.net repository</name>-->
    <!--<url>http://download.java.net/maven/2</url>-->
    <!--</repository>-->

    <!--<repository>-->
    <!--<id>hypergraphdb</id>-->
    <!--<url>http://hypergraphdb.org/maven</url>-->
    <!--</repository>-->

    <!--<repository>-->
    <!--<id>tomp2p.net</id>-->
    <!--<url>http://tomp2p.net/dev/mvn/</url>-->
    <!--</repository>-->


    <!--<repository>-->
    <!--<id>snapshots-repo</id>-->
    <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
    <!--<releases>-->
    <!--<enabled>false</enabled>-->
    <!--</releases>-->
    <!--<snapshots>-->
    <!--<enabled>true</enabled>-->
    <!--</snapshots>-->
    <!--</repository>-->

    <!--</repositories>-->


</project>
